added restart btn

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
             <div class="card center" id="myCard">
                 <div class="card-body">
-                    <img class="card-img-top img-fluid" src="assets/images/rimort.png" alt="">
+                    <img class="card-img-top img-fluid banner" src="assets/images/rimort.png" alt="">
                     <p>Time remaining: <span id="time">30</span> Seconds</p><br>
                     <h2 id="question"></h2>
                     <p class="myChoices" id="choice1">Yo Mama</p>
