--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
                     <img class="card-img-top img-fluid banner" src="assets/images/rimort.png" alt="">
                     <p>Time remaining: <span id="time">30</span> Seconds</p><br>
                     <h2 id="question"></h2>
-                    <p class="myChoices" id="choice1">Yo Mama</p>
-                    <p class="myChoices" id="choice2">My sisters Mama</p>
-                    <p class="myChoices" id="choice3">His Mama</p>
-                    <p class="myChoices" id="choice4">Her Tia</p>
+                    <p class="myChoices" id="choice1"></p>
+                    <p class="myChoices" id="choice2"></p>
+                    <p class="myChoices" id="choice3"></p>
+                    <p class="myChoices" id="choice4"></p>
                 </div>
                 <div class="progress">
-                    <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                    <div class="progress-bar progress-bar-striped bg-success  progress-bar-animated" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                 </div>
             </div>
         </div>
